--- a/templates/components/button-icon.hbs
+++ b/templates/components/button-icon.hbs
@@ -5,6 +5,9 @@
   {{#if buttonImg}}
     <img class="button-img" src="{{buttonImg}}" />
   {{/if}}
+  {{#if buttonSvg}}
+    {{{buttonSvg}}}
+  {{/if}}
   {{#if buttonLabel}}
     <label class="button-label">{{buttonLabel}}</label>
   {{/if}}
