--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -155,6 +155,14 @@
       0 0 4px var(--blades-black-dark);
   }
 
+  .hidden {
+    display: none !important;
+  }
+
+  .start-invisible {
+    opacity: 0;
+  }
+
   .text-checkbox {
     position: relative;
     display: inline-block;
