--- a/templates/components/roll-collab-mod.hbs
+++ b/templates/components/roll-collab-mod.hbs
@@ -44,8 +44,8 @@
       {{#if label}}
       <label class="select-label">{{label}}</label>
       {{/if}}
-      {{log "THIS" this}}
-      {{log "Select Options" selectOptions}}
+      {{eLog "THIS" this}}
+      {{eLog "Select Options" selectOptions}}
       <div class="roll-select">
         {{> "systems/eunos-blades/templates/components/select.hbs"
         cssClass="shadowed roll-sheet-select roll-sheet-select-doc"
