--- a/templates/dialog-consequence.hbs
+++ b/templates/dialog-consequence.hbs
@@ -1,165 +1,28 @@
-
-{{!-- Data Passed:
-  consequenceData: {partial: Array<ConsequenceData>, fail: Array<ConsequenceData>},
-  consequenceTypeOptions: {partial: Array<ConsequenceType>, fail: Array<ConsequenceType>}
-
-  --}}
-{{log "DialogConsequences" this}}
+{{eLog "DialogConsequence Context" this}}
 <div class="{{cssClass}} dialog-content dialog-consequence">
   <section class="tab-content flex-vertical">
-    <div class="consequence-section full-width">
-      <h2>On Partial Success</h2>
-      {{#with "partial" as |rollResult|}}
-      {{log "LOOKUP" (lookup ../consequenceData "partial")}}
-      {{#each (lookup ../consequenceData rollResult) as |cData cIndex|}}
-        {{#if cData}}
-        <div class="roll-consequence-row flex-vertical full-width">
-          <div class="roll-consequence-entry-row full-width flex-horizontal">
-            {{!-- Icon --}}
-            <img class="consequence-type-icon" src="{{cData.icon}}" />
-            {{!-- Type --}}
-            {{> "systems/eunos-blades/templates/components/select.hbs"
-              cssClass="roll-consequence-type-select"
-              dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." rollResult "." cIndex ".type")
-              dataDType="String"
-              dataDocType=false
-              selected=cData.type
-              options=(lookup ../../consequenceTypeOptions rollResult ) }}
-            {{!-- Attribute --}}
-            {{> "systems/eunos-blades/templates/components/select.hbs"
-              cssClass="roll-consequence-attribute-select"
-              dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." rollResult "." cIndex ".attribute")
-              dataDType="String"
-              dataDocType=false
-              selected=cData.attribute
-              options=../../consequenceAttributeOptions }}
-            {{!-- AI Trigger --}}
-            {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-              blockClass="ai-query-button"
-              buttonClass="fa-solid fa-brain-circuit"
-              tooltip="<b>Query AI</b><br>Query OpenAI for suggestions on resisted versions of this consequence."
-              action=(concat "ai-query-" rollResult "-" cIndex)
-            }}
-            {{!-- Name --}}
-            <input class="shadowed consequence-name" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{rollResult}}.{{cIndex}}.name" />
-          </div>
-          {{!-- AI Options --}}
-          <div class="flex-vertical consequence-resist-options-container">
-            {{#each cData.resistOptions as |rData rIndex|}}
-            <div class="flex-horizontal consequence-resist-option">
-              {{!-- Select Resist Option --}}
-              {{#if rData.isSelected}}
-                {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                  blockClass="resist-select-button"
-                  buttonClass="fa-solid fa-star gold-bright"
-                  tooltip="<b>Selected AI Suggestion</b><br>Click to Deselect"
-                  action=(concat "gm-select-toggle-" rollResult "-" cIndex "-" rIndex)
-                }}
-              {{else}}
-                {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                  blockClass="resist-select-button"
-                  buttonClass="fa-regular fa-star grey"
-                  tooltip="<b>AI Suggestion</b><br>Click to Select."
-                  action=(concat "gm-select-toggle-" rollResult "-" cIndex "-" rIndex)
-                }}
-              {{/if}}
-              {{!-- Type --}}
-              {{> "systems/eunos-blades/templates/components/select.hbs"
-                cssClass="roll-consequence-type-select"
-                dataAction="gm-select"
-                dataFlagTarget=(concat "rollCollab.consequenceData." rollResult "." cIndex ".resistOptions." rIndex ".type")
-                dataDType="String"
-                dataDocType=false
-                selected=rData.type
-                options=../../../consequenceTypeOptionsAll }}
-              {{!-- Name --}}
-              <input class="shadowed consequence-name" type="text" value="{{rData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{rollResult}}.{{cIndex}}.resistOptions.{{rIndex}}.name" />
-            </div>
-            {{/each}}
-          </div>
-        </div>
-        {{/if}}
-      {{/each}}
-      {{/with}}
+    {{> "systems/eunos-blades/templates/parts/dialog-consequence-block.hbs"
+      rollPosition="controlled"
+      consequenceData=consequenceData
+      consequenceTypeOptions=consequenceTypeOptions
+      consequenceTypeOptionsAll=consequenceTypeOptionsAll
+      consequenceAttributeOptions=consequenceAttributeOptions
+    }}
+    {{> "systems/eunos-blades/templates/parts/dialog-consequence-block.hbs"
+      rollPosition="risky"
+      consequenceData=consequenceData
+      consequenceTypeOptions=consequenceTypeOptions
+      consequenceTypeOptionsAll=consequenceTypeOptionsAll
+      consequenceAttributeOptions=consequenceAttributeOptions
+    }}
+    {{> "systems/eunos-blades/templates/parts/dialog-consequence-block.hbs"
+      rollPosition="desperate"
+      consequenceData=consequenceData
+      consequenceTypeOptions=consequenceTypeOptions
+      consequenceTypeOptionsAll=consequenceTypeOptionsAll
+      consequenceAttributeOptions=consequenceAttributeOptions
+    }}
 
-      <h2>On Failure</h2>
-      {{#with "fail" as |rollResult|}}
-      {{log "LOOKUP" (lookup ../consequenceData "partial")}}
-      {{#each (lookup ../consequenceData rollResult) as |cData cIndex|}}
-        {{#if cData}}
-        <div class="roll-consequence-row flex-vertical full-width">
-          <div class="roll-consequence-entry-row full-width flex-horizontal">
-            {{!-- Icon --}}
-            <img class="consequence-type-icon" src="{{cData.icon}}" />
-            {{!-- Type --}}
-            {{> "systems/eunos-blades/templates/components/select.hbs"
-              cssClass="roll-consequence-type-select"
-              dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." rollResult "." cIndex ".type")
-              dataDType="String"
-              dataDocType=false
-              selected=cData.type
-              options=(lookup ../../consequenceTypeOptions rollResult ) }}
-            {{!-- Attribute --}}
-            {{> "systems/eunos-blades/templates/components/select.hbs"
-              cssClass="roll-consequence-attribute-select"
-              dataAction="gm-select"
-              dataFlagTarget=(concat "rollCollab.consequenceData." rollResult "." cIndex ".attribute")
-              dataDType="String"
-              dataDocType=false
-              selected=cData.attribute
-              options=../../consequenceAttributeOptions }}
-            {{!-- AI Trigger --}}
-            {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-              blockClass="ai-query-button"
-              buttonClass="fa-solid fa-brain-circuit"
-              tooltip="<b>Query AI</b><br>Query OpenAI for suggestions on resisted versions of this consequence."
-              action=(concat "ai-query-" rollResult "-" cIndex)
-            }}
-            {{!-- Name --}}
-            <input class="shadowed consequence-name" type="text" value="{{cData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{rollResult}}.{{cIndex}}.name" />
-          </div>
-          {{!-- AI Options --}}
-          <div class="flex-vertical consequence-resist-options-container">
-            {{#each cData.resistOptions as |rData rIndex|}}
-            <div class="flex-horizontal consequence-resist-option">
-              {{!-- Select Resist Option --}}
-              {{#if rData.isSelected}}
-                {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                  blockClass="resist-select-button"
-                  buttonClass="fa-solid fa-star gold-bright"
-                  tooltip="<b>Selected AI Suggestion</b><br>Click to Deselect"
-                  action=(concat "gm-select-toggle-" rollResult "-" cIndex "-" rIndex)
-                }}
-              {{else}}
-                {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                  blockClass="resist-select-button"
-                  buttonClass="fa-regular fa-star grey"
-                  tooltip="<b>AI Suggestion</b><br>Click to Select."
-                  action=(concat "gm-select-toggle-" rollResult "-" cIndex "-" rIndex)
-                }}
-              {{/if}}
-              {{!-- Type --}}
-              {{> "systems/eunos-blades/templates/components/select.hbs"
-                cssClass="roll-consequence-type-select"
-                dataAction="gm-select"
-                dataFlagTarget=(concat "rollCollab.consequenceData." rollResult "." cIndex ".resistOptions." rIndex ".type")
-                dataDType="String"
-                dataDocType=false
-                selected=rData.type
-                options=../../../consequenceTypeOptionsAll }}
-              {{!-- Name --}}
-              <input class="shadowed consequence-name" type="text" value="{{rData.name}}" data-action="gm-update-dialog" data-flag-target="rollCollab.consequenceData.{{rollResult}}.{{cIndex}}.resistOptions.{{rIndex}}.name" />
-            </div>
-            {{/each}}
-          </div>
-        </div>
-        {{/if}}
-      {{/each}}
-      {{/with}}
-    </div>
   </section>
 </div>
 
